add search-request-limiter