@@ -24,7 +24,13 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -39,8 +45,10 @@ import java.util.stream.Collectors;
  */
 public class CantoApi {
 
+  static final String SCHEME = "scheme";
   static private final Moshi moshi = new Moshi.Builder().build();
   static JsonAdapter<CantoAccessTokenData> cantoAccessTokenDataJsonAdapter = moshi.adapter(CantoAccessTokenData.class);
+
   private String tenant;
   private String oAuthBaseUrl;
   private @Nullable RequestLimiter singleFetchRequestLimiter;
@@ -210,7 +218,7 @@ public class CantoApi {
     HttpUrl url = getApiUrl().addPathSegments(assetId.getPath())
         .build();
 
-    Logging.logInfo("[getAssetById] fetching " + url, LOGGER);
+    Logging.logDebug("[getAssetById] fetching " + url, LOGGER);
 
     CantoAsset asset = null;
     if (singleFetchRequestLimiter != null) {
@@ -239,9 +247,9 @@ public class CantoApi {
    * @return List of CantoAssets in the same order as identifiers. Missing Assets are replaced by null
    */
   public @NotNull List<@Nullable CantoAsset> fetchAssets(@NotNull List<? extends CantoAssetIdentifier> assetIdentifiers) {
-    Logging.logInfo("[fetchAssets] fetching ids: " + Strings.implode(assetIdentifiers, ","), LOGGER);
+    Logging.logDebug("[fetchAssets] fetching ids: " + Strings.implode(assetIdentifiers, ","), LOGGER);
     if (assetIdentifiers.isEmpty()) {
-      Logging.logInfo("[fetchAssets] Identifier List empty, returning empty list", LOGGER);
+      Logging.logDebug("[fetchAssets] Identifier List empty, returning empty list", LOGGER);
       return Collections.emptyList();
     }
     if (assetIdentifiers.size() == 1) {
@@ -269,14 +277,14 @@ public class CantoApi {
     }
 
     List<Map<String, String>> requestList = identifiersToFetch.stream()
-        .map(cantoAssetIdentifier -> Map.of("id", cantoAssetIdentifier.getId(), "scheme", cantoAssetIdentifier.getSchema()))
-        .collect(Collectors.toList());
+      .map(cantoAssetIdentifier -> Map.of("id", cantoAssetIdentifier.getId(), SCHEME, cantoAssetIdentifier.getSchema()))
+      .toList();
 
     String stringifiedJsonBody = moshi.adapter(List.class)
-        .toJson(requestList);
+      .toJson(requestList);
 
     HttpUrl url = getApiUrl().addPathSegments("batch/content")
-        .build();
+      .build();
 
     if (batchFetchRequestLimiter != null) {
       batchFetchRequestLimiter.delayRequestIfNecessary();
@@ -297,12 +305,12 @@ public class CantoApi {
 
       List<CantoAsset> docResult = cantoBatchResponse.getDocResult();
       Map<String, CantoAsset> newlyFetchedAssets = docResult.stream()
-              .filter(Objects::nonNull)
-              .collect(Collectors.toMap(asset -> CantoAssetIdentifierFactory.fromCantoAsset(asset)
-              .getPath(), Function.identity()));
+        .filter(Objects::nonNull)
+        .collect(Collectors.toMap(asset -> CantoAssetIdentifierFactory.fromCantoAsset(asset)
+          .getPath(), Function.identity()));
 
       // Add newly fetched assets to cache
-      projectBoundCacheAccess.addAllToCache(docResult.stream().filter(Objects::nonNull).collect(Collectors.toList()));
+      projectBoundCacheAccess.addAllToCache(docResult.stream().filter(Objects::nonNull).toList());
 
       Logging.logDebug("[fetchAssets] " + cantoBatchResponse, LOGGER);
 
@@ -321,13 +329,12 @@ public class CantoApi {
       }
 
       return resultList;
-
     } catch (Exception e) {
       Logging.logError("Error during bulk fetch of Ids" + Strings.implode(assetIdentifiers, ","), e, this.getClass());
       // Return list of nulls
       return assetIdentifiers.stream()
-          .map(id -> (CantoAsset) null)
-          .collect(Collectors.toList());
+        .map(id -> (CantoAsset) null) // NOSONAR
+        .toList();
 
     }
 
@@ -358,24 +365,24 @@ public class CantoApi {
 
     if (albumId != null && !albumId.equals("--Folder--")) {
       urlBuilder.addPathSegments("album")
-          .addPathSegments(albumId);
+        .addPathSegments(albumId);
     } else {
       urlBuilder.addPathSegments("search");
     }
 
     urlBuilder.addQueryParameter("keyword", keyword)
-        .addQueryParameter("start", String.valueOf(start))
-        .addQueryParameter("limit", String.valueOf(limit));
+      .addQueryParameter("start", String.valueOf(start))
+      .addQueryParameter("limit", String.valueOf(limit));
 
     // Validate CantoScheme
     CantoScheme cantoScheme = CantoScheme.fromString(scheme);
     if (cantoScheme != null) {
-      urlBuilder.addQueryParameter("scheme", cantoScheme.toString());
+      urlBuilder.addQueryParameter(SCHEME, cantoScheme.toString());
     } else {
       final String allSchemes = Arrays.stream(CantoScheme.values())
-          .map(CantoScheme::toString)
-          .collect(Collectors.joining("|"));
-      urlBuilder.addQueryParameter("scheme", allSchemes);
+        .map(CantoScheme::toString)
+        .collect(Collectors.joining("|"));
+      urlBuilder.addQueryParameter(SCHEME, allSchemes);
     }
     if (approvalStatus != null) {
       urlBuilder.addQueryParameter("approval", approvalStatus.toLowerCase());
@@ -383,7 +390,11 @@ public class CantoApi {
 
     final HttpUrl url = urlBuilder.build();
 
-    Logging.logInfo("[fetchSearch] " + url, getClass());
+    Logging.logDebug("[fetchSearch] " + url, getClass());
+
+    if (searchRequestLimiter != null) {
+      searchRequestLimiter.delayRequestIfNecessary();
+    }
 
     try (Response response = executeGetRequest(url)) {
       ResponseBody body = response.body();
@@ -448,10 +459,10 @@ public class CantoApi {
 
     RequestBody requestBody = RequestBody.create(jsonBody, MediaType.parse("application/json"));
     Request request = new Request.Builder().url(url)
-        .post(requestBody)
-        .build();
+      .post(requestBody)
+      .build();
     Response response = getClient().newCall(request)
-        .execute();
+      .execute();
 
     if (!response.isSuccessful()) {
       response.close();
@@ -475,7 +486,7 @@ public class CantoApi {
     if (body != null) {
       try {
         bodyText = body.source()
-            .readUtf8();
+          .readUtf8();
       } catch (Exception e) {
         Logging.logError("Unable to read Response Body", this.getClass());
       } finally {
@@ -508,26 +519,26 @@ public class CantoApi {
     final HttpUrl.Builder urlBuilder = baseUrl.newBuilder();
 
     final String url = urlBuilder.addPathSegments("oauth/api/oauth2/compatible/token")
-        .addQueryParameter("app_id", appId)
-        .addQueryParameter("app_secret", appSecret)
-        .addQueryParameter("grant_type", "client_credentials")
-        .addQueryParameter("user_id", userId)
-        .toString();
+      .addQueryParameter("app_id", appId)
+      .addQueryParameter("app_secret", appSecret)
+      .addQueryParameter("grant_type", "client_credentials")
+      .addQueryParameter("user_id", userId)
+      .toString();
 
     OkHttpClient client = new OkHttpClient.Builder().build();
 
     RequestBody requestBody = RequestBody.create("", null);
 
     Request request = new Request.Builder().url(url)
-        .post(requestBody)
-        .build();
+      .post(requestBody)
+      .build();
 
     try (Response response = client.newCall(request)
-        .execute()) {
+      .execute()) {
       if (response.isSuccessful() && response.body() != null) {
 
         CantoAccessTokenData cantoAccessTokenData = cantoAccessTokenDataJsonAdapter.fromJson(response.body()
-                                                                                                 .source());
+          .source());
         if (CantoAccessTokenData.isValid(cantoAccessTokenData)) {
           Logging.logInfo("[generateAccessToken] Successfully generated new AccessToken: " + cantoAccessTokenData, CantoApi.class);
           return cantoAccessTokenData;
@@ -554,7 +565,7 @@ public class CantoApi {
   public @Nullable String fetchFolderStructure() {
     // Build the URL to fetch the folder structure
     HttpUrl url = getApiUrl().addPathSegments("tree?layer=-1")
-        .build();
+      .build();
 
     // Log the URL being fetched
     Logging.logInfo("[fetchFolderStructure] fetching " + url, LOGGER);
